test/chainsaw/securityconfig/entraid/service-entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: security-config-entraid-83b98f20
  labels:
    accesserator.kartverket.no/controller: securityconfig
    app.kubernetes.io/managed-by: accesserator
spec:
  exportTo:
    - .
  hosts:
    - login.microsoftonline.com
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
